Fix "ocurrence" to "occurrence"
